--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
     overflow-wrap: normal;
     height: 100%;
     min-height: 100%;
-    background: #FFFFFF
+    background-color: #FFFFFF
 }
 
 p {
@@ -27,3 +27,16 @@ p {
 	text-transform: none;
 }
 
+#header-img {
+	background-image: url("../images/nikita-tikhomirov-bxT82IUY_H8-unsplash.jpg");
+	max-width: 100%;
+  	height: auto;
+}
+
+ .hide {
+	display: none;
+ }
+
+ .alert{
+	background-color: #E60000;
+ }
