update CSS for header styling. Edit header HTML

--- a/css/index.css
+++ b/css/index.css
@@ -1,40 +1,30 @@
-body {
-    text-transform: none;
-    font-family: Georgia, helvetica, sans-serif;
-    font-feature-settings: normal;
-    font-style: normal;
-    letter-spacing: normal;
-    line-break: auto;
-    line-height: 1.69em;
-    font-size: 16px;
-    font-weight: 400;
-    overflow-wrap: normal;
-    height: 100%;
-    min-height: 100%;
-    background-color: #FFFFFF
+
+
+#background-img{
+    background-image: url("../images/background.jpg");
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#header-section h1 {
+	font-size: 3.5em;
 }
 
-p {
-	font-family: Georgia, serif;
-	font-size: 25px;
-	letter-spacing: 2px;
-	word-spacing: 2px;
-	color: #444444;
-	font-weight: normal;
-	text-decoration: none;
-	font-style: normal;
-	font-variant: normal;
-	text-transform: none;
-}
-
-#header-img {
-	background-image: url("../images/background.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	width:100%;
-	left: 30%;
-	right: 30%;
-	height: 25em;
+#header-section {
+	background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,.4);
+    color: #fff;
+    font-weight: 700;
+    position: absolute;
+    top: 215px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    width: 80%;
+    max-width: 500px;
+    padding: 10px;
+    text-align: center;
 }
 
  .hide {
