Add CSS styling for hover dropdown buttons and edit HTML

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@
 }
 
 #header-section {
-	background-color: rgb(0,0,0);
+	background-color: rgb(55, 64, 60);
     background-color: rgba(0,0,0,.5);
     color: #fff;
     font-weight: 700;
@@ -34,3 +34,48 @@
  .alert{
 	background-color: #E60000;
  }
+
+ .dropDownBtn {
+	background-color: rgb(156, 192, 143);	
+	color: rgb(255, 255, 255);
+	padding: 16px;
+	font-size: 16px;
+	border-radius: 12px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border: none;	
+  }
+  
+  .buttonSelectors {
+	position: relative;
+	text-align: center;	
+  }
+  
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	margin-left: 466.5px; 
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;	
+  }
+  
+  .dropdown-content a:hover {
+	background-color: #ddd;
+}
+  
+  .buttonSelectors:hover .dropdown-content {
+	display: block;
+}
+  
+  .buttonSelectors:hover .dropDownBtn {
+	background-color: rgb(105, 130, 96);
+	color: rgba(0,0,0);
+}
