--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,17 @@
 	background-color: #E60000;
  }
 
- .dropDownBtn {
+ .moodDropDownBtn {
+	background-color: rgb(156, 192, 143);	
+	color: rgb(255, 255, 255);
+	padding: 16px;
+	font-size: 16px;
+	border-radius: 12px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border: none;	
+  }
+
+  .spiritDropDownBtn {
 	background-color: rgb(156, 192, 143);	
 	color: rgb(255, 255, 255);
 	padding: 16px;
