--- a/css/index.css
+++ b/css/index.css
@@ -91,3 +91,16 @@
 	background-color: rgb(105, 130, 96);
 	color: rgba(0,0,0);
 }
+
+#drinkImg{
+	height: auto; 
+    width: auto; 
+    max-width: 300px; 
+    max-height: 300px;
+	position: center;
+}
+
+#cocktail-recipe{
+	position: relative;
+	text-align: center;	
+}
