--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 #header-section h1 {
 	font-size: 3.5em;
 }
@@ -28,15 +29,15 @@
     text-align: center;
 }
 
- .hide {
+.hide {
 	display: none;
  }
 
- .alert{
+.alert{
 	background-color: #E60000;
  }
 
- .moodDropDownBtn {
+.moodDropDownBtn {
 	background-color: rgb(156, 192, 143);	
 	color: rgb(255, 255, 255);
 	padding: 16px;
@@ -46,7 +47,7 @@
 	border: none;	
   }
 
-  .spiritDropDownBtn {
+.spiritDropDownBtn {
 	background-color: rgb(156, 192, 143);	
 	color: rgb(255, 255, 255);
 	padding: 16px;
@@ -56,12 +57,12 @@
 	border: none;	
   }
   
-  .buttonSelectors {
+.buttonSelectors {
 	position: relative;
 	text-align: center;	
   }
   
-  .dropdown-content {
+.dropdown-content {
 	display: none;
 	position: relative;	
 	text-align: center;
@@ -71,7 +72,7 @@
 	z-index: 1;
   }
   
-  .dropdown-content a {
+.dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
@@ -79,15 +80,15 @@
 	text-align: center;
   }
   
-  .dropdown-content a:hover {
+.dropdown-content a:hover {
 	background-color: #ddd;
 }
   
-  .buttonSelectors:hover .dropdown-content {
+.buttonSelectors:hover .dropdown-content {
 	display: block;
 }
   
-  .buttonSelectors:hover .dropDownBtn {
+.buttonSelectors:hover .dropDownBtn {
 	background-color: rgb(105, 130, 96);
 	color: rgba(0,0,0);
 }
@@ -105,4 +106,14 @@
 	text-align: center;	
 }
 
+.container{
+	height: auto; 
+    width: auto; 	
+	position: center;
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	margin-bottom: 25px;
+	text-align: center;
+	padding: 10px 20px;
+}
 
