--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 
+body {margin:25px;}
 
 #background-img{
     background-image: url("../images/new background.jpg");
@@ -102,14 +103,12 @@
 }
 
 #cocktail-recipe{
-	position: relative;
 	text-align: center;	
 }
 
 .container{
-	height: auto; 
-    width: auto; 	
-	position: center;
+	width: 80%;	
+	margin: 0 auto;	
 	background-color: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	margin-bottom: 25px;
