--- a/css/index.css
+++ b/css/index.css
@@ -100,6 +100,7 @@ body {margin:25px;}
     max-width: 300px; 
     max-height: 300px;
 	position: center;
+	border-radius: 8px;
 }
 
 #cocktail-recipe{
@@ -107,12 +108,13 @@ body {margin:25px;}
 }
 
 .container{
-	width: 80%;	
+	width: 40%;	
 	margin: 0 auto;	
 	background-color: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	margin-bottom: 25px;
 	text-align: center;
 	padding: 10px 20px;
+	border-radius: 8px;
 }
 
