Add branding div to HTML and style with CSS

--- a/css/index.css
+++ b/css/index.css
@@ -133,3 +133,12 @@ body {margin:25px;}
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	border: none;	
 }
+
+.branding {
+	color:rgb(105, 130, 96);
+	width: 40%;
+	left: 30%;
+	right: 30%;
+	text-align: center;
+	position: relative;
+}
