--- a/css/index.css
+++ b/css/index.css
@@ -161,18 +161,20 @@ body {
 
 .newDrink{	
 	font-family: Arial;
-	background-color: rgb(105, 130, 96);	
+	background-color: rgb(156, 192, 143);	
 	color: rgb(255, 255, 255);
 	padding: 8px;
 	font-size: 16px;
 	border-radius: 12px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	border: none;	
+	position: absolute;
+	left: 20px;
 }
 
 .branding {	
 	font-family: Arial;
-	color:rgb(105, 130, 96);
+	color:rgb(156, 192, 143);
 	width: 40%;
 	left: 30%;
 	right: 30%;
