--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body {
 	color: rgb(156, 192, 143);
 }
 
-#favorites {
+.drinkFavorites {
 	position: absolute;
 	left: 20px;
 }
@@ -118,7 +118,7 @@ body {
 	color: rgba(0,0,0);
 }
 
-#drinkImg{
+.thumbnail{
 	height: auto; 
     width: auto; 
     max-width: 300px; 
