--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 
 
 body {
-	margin:25px;
+	margin:0px;
 }
 
 #background-img{
@@ -27,6 +27,7 @@ body {
 #favorites {
 	position: absolute;
 	left: 20px;
+	height: auto;
 }
 
 #header-section {
@@ -126,7 +127,7 @@ body {
 	position: center;
 	border-radius: 8px;
 }
-
+#favorites,
 #cocktail-recipe{	
 	font-family: Arial;
 	text-align: center;	
@@ -174,11 +175,13 @@ body {
 }
 
 .branding {	
-	font-family: Arial;
-	color:rgb(156, 192, 143);
-	width: 40%;
-	left: 30%;
-	right: 30%;
+	line-height: 100px;
+	position: fixed;	
+	bottom:0px;
+	width: 100%;
+	margin-left: 0;
+	margin-right: 0;
+	height: 100px;
 	text-align: center;
-	position: fixed;
 }
+
